# AI_Core

./: .gitignore  .travis.yml  README.md
src/conway-game-life/: build.gradle  pom.xml
src/conway-game-life/src/main/java/com/conway/app/: Board.java  Cells.java  GUI.java  Main.java
src/decisionTrees/src/: decisionTrees.py
src/heuristics/a_star/: input.puzzle  meson.build
src/heuristics/a_star/lib/: astar.h  manhattan.h  matrix.h
src/heuristics/a_star/src/: Main.cpp  astar.cpp  manhattan.cpp  matrix.cpp
src/heuristics/aco/: meson.build
src/heuristics/aco/data/: g2.gv  resultados1.txt
src/heuristics/aco/lib/: aco.hpp  matrix.hpp
src/heuristics/aco/src/: Main.cpp  aco.cpp  testing.cpp
src/heuristics/genetic_a/: ga.py
src/heuristics/pso/: pco.cpp
src/heuristics/saa/: .travis.yml  instancias.txt  meson.build  saa.cpp
src/heuristics/saa/lib/: matrix.hpp  saa.hpp
src/heuristics/saa/src/: Main.cpp  matrix.cpp  saa.cpp  testing.cpp
src/logic_gates/AND/: AND.py
src/neuronal_net/ANN/src/: ann.py
src/neuronal_net/CIFAR-10/.ipynb_checkpoints/: CIFAR10-checkpoint.ipynb
src/neuronal_net/Perceptron/: perceptron_simple.ipynb
src/neuronal_net/Perceptron/.ipynb_checkpoints/: perceptron_simple-checkpoint.ipynb
src/neuronal_net/logic_gates/OR/: OR.py
src/neuronal_net/logic_gates/XOR/: XOR.py
src/optimization/optimization-pca-regression/: Optmim_PCA_Rgression.py  T1.ipynb
src/optimization/optimization-pca-regression/.ipynb_checkpoints/: T1-checkpoint.ipynb
src/saa/: Main.cpp  Results.txt  matrix.cpp  saa  saa.cpp
src/saa/src/: Main.cpp  testing.cpp
